--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -1,6 +1,6 @@
 /* Custom CSS */
 
-// * { color: red }
+/* * { color: red } */
 
 .clearfix::after {
   content: "";
@@ -89,7 +89,7 @@ body.path-frontpage article.node--type-about-palistory.node--promoted,
 body.path-frontpage article.node--type-about-palistory.node--promoted span.field-name-title {
   color: white;
   background-color: transparent;
-  // background-color: rgba(255, 0, 0, 0.4);
+  /* background-color: rgba(255, 0, 0, 0.4); */
 }
 
 .view-id-0_palistory_about .node--sticky .node__container {
@@ -246,7 +246,7 @@ div#navbar div.l-rw,
 footer#footer,
 div#rid-footer {
   background-color: #000000;
-  // background-color: #2e2e2e;
+  /* background-color: #2e2e2e; */
 }
 
 div.card-group div.field-name--field-card-title h3.field__label,
@@ -270,9 +270,9 @@ div#block-views-block-0-palistory-board-block-1 div.views.col,
 div.card-group article.node--type-interviews {
   background-color: #e9e9e9;
   -webkit-box-shadow: 0 3px 4px 0 rgba(223,0,2,0.1);
-  // box-shadow: rgba(233, 0, 2, 0.4) 5px 5px, rgba(233, 0, 2, 0.3) 10px 10px, rgba(233, 0, 2, 0.2) 15px 15px, rgba(233, 0, 2, 0.1) 20px 20px, rgba(233, 0, 2, 0.05) 25px 25px;
+  /* box-shadow: rgba(233, 0, 2, 0.4) 5px 5px, rgba(233, 0, 2, 0.3) 10px 10px, rgba(233, 0, 2, 0.2) 15px 15px, rgba(233, 0, 2, 0.1) 20px 20px, rgba(233, 0, 2, 0.05) 25px 25px; */
 }
-// box-shadow: rgba(233, 0, 2, 0.4) 5px 5px, rgba(233, 0, 2, 0.3) 10px 10px, rgba(233, 0, 2, 0.2) 15px 15px, rgba(233, 0, 2, 0.1) 20px 20px, rgba(233, 0, 2, 0.05) 25px 25px;
+/* box-shadow: rgba(233, 0, 2, 0.4) 5px 5px, rgba(233, 0, 2, 0.3) 10px 10px, rgba(233, 0, 2, 0.2) 15px 15px, rgba(233, 0, 2, 0.1) 20px 20px, rgba(233, 0, 2, 0.05) 25px 25px; */
 
 nav#block-at-palistry-main-menu span.menu__link--wrapper {
   background-color: #3e3e3e;
@@ -354,8 +354,8 @@ div.views-col {
   width: inherit !important;
 }
 
-// footer div#block-mainnavigation div.block-menu__content {
-// footer #block-mainnavigation > div:nth-child(1) > div:nth-child(3) {	
+/* footer div#block-mainnavigation div.block-menu__content { */
+/* footer #block-mainnavigation > div:nth-child(1) > div:nth-child(3) {	*/
 
 ul.menu-name--main,
 div.l-footer ul.menu-name--main,
@@ -369,7 +369,7 @@ ul.menu-name--main li {
   align-items: center;
 }
 
-// see: templates/block/block--purchaseakuffieyh.html.twig
+/* see: templates/block/block--purchaseakuffieyh.html.twig */
 div#rid-content-suffix -> div#block-purchaseakuffieyh -> div.block__content {
   background-image: url("/sites/default/files/public_images/2025-04/Palistory-banner-03.png");
   background-size: auto 400px;
@@ -425,7 +425,7 @@ header#masthead div#rid-header-first div#block-at-palistry-branding {
 header#masthead #block-donatenowbutton {
   margin: 0;
 }
-  // max-width: 5%;
+  /* max-width: 5%; */
 
 header#masthead #block-donatenowbutton .field-block-content--body {
   margin: 0 0 0 50px;
