--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -106,6 +106,13 @@ article.node--id-1 span.field-name-title {
   background-color: transparent;
 }
 
+div.palistory_mission {
+  background-color: #b8b8b8;
+  background: rgba(169, 169, 169, .2)
+  border-radius: 25px;
+  margin: 12px;
+}
+
 @media screen and (min-width: 800px) {
 
   article.node--id-1 h2.node__title {
