--- a/templates/layout/html.html.twig
+++ b/templates/layout/html.html.twig
@@ -60,5 +60,6 @@
     {{ page }}
     {{ page_bottom }}
     <js-bottom-placeholder token="{{ placeholder_token|raw }}">
+    <script type="text/javascript" src="/themes/custom/at2_palistry/js/palistry_custom.js"></script>
   </body>
 </html>
