turn off lime green bg color

--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -287,9 +287,11 @@ div.card-group article.node--type-interviews {
 }
 /* box-shadow: rgba(233, 0, 2, 0.4) 5px 5px, rgba(233, 0, 2, 0.3) 10px 10px, rgba(233, 0, 2, 0.2) 15px 15px, rgba(233, 0, 2, 0.1) 20px 20px, rgba(233, 0, 2, 0.05) 25px 25px; */
 
-nav#block-at-palistry-main-menu span.menu__link--wrapper {
-  /* background-color: #3e3e3e; */
-}
+/*
+ * nav#block-at-palistry-main-menu span.menu__link--wrapper {
+ *   background-color: #3e3e3e;
+ * }
+ */
 
 .ms-dropmenu .rm-block__content .menu-level-1 > li > span > .menu__link.is-active, .ms-horizontal .rm-block__content .menu-level-1 > li > span > .menu__link.is-active {
   color: #ffffff;
