display: none; for board slideshow navigation

--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -211,6 +211,8 @@ div.views-field-field-embed-video div.views-field-body {
   
 }
 
+ul.flex-direction-nav,
+ol.flex-control-paging,
 div#block-donatenowbutton,
 h2#block-palistoryboard-title,
 article.node--id-1 h2.node__title,
