--- a/styles/css/components/color.css
+++ b/styles/css/components/color.css
@@ -1417,3 +1417,73 @@ input.cke_dialog_ui_input_password {
   border-color: #eeeeee !important;
 }
 /*# sourceMappingURL=color.css.map */
+
+
+.pr-footer {
+    background-color: #000;
+    padding-top: 25px;
+}
+#block-footerlogo {
+    float: left;
+    width: 30%;
+}
+#block-footertext {
+    float: right;
+    width: 60%;
+    color: #fff;
+}
+nav#block-at-palistry-footer {
+    clear: both;
+    text-align: center;
+}
+#block-footerlogo img {
+    width: 150px;
+}
+nav#block-at-palistry-footer ul.menu.odd.menu-level-1.menu-name--footer {
+    justify-content: center;
+    gap: 25px;
+    color: #fff;
+}
+#block-copyright {
+    border-top: 2px solid #fff;
+    padding-top: 20px;
+    text-align: center;
+    color: #fff;
+}
+#block-at-palistry-branding {
+    width: 200px;
+    float: left;
+}
+nav#block-at-palistry-main-menu {
+    float: right;
+}
+.pr-navbar {
+    color: #0000;
+    background-color: #fff;
+    padding: 15px 0px;
+}
+nav#block-at-palistry-main-menu ul li:last-child a.menu__link {
+    background: #CB0005;
+    color: #fff;
+    border-radius: 30px;
+    margin-left: 30px;
+    border-bottom: none;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+nav#block-at-palistry-main-menu ul li a.menu__link {
+    color: #000;
+    border-bottom: 2px solid transparent;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-left: 25px;
+}
+nav#block-at-palistry-main-menu ul li a.menu__link.is-active {
+    border-bottom: 2px solid #cb0005;
+}
+nav#block-at-palistry-main-menu ul li a.menu__link:hover {
+    background: transparent;
+}
+nav#block-at-palistry-main-menu ul li:last-child a.menu__link:hover {
+    background: #CB0005;
+}
