--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -540,3 +540,762 @@ li#menu-name--main__contribute {
 #block-mainnavigation{
 	clear: both;
 }
+
+/*new*/
+
+
+.pr-footer {
+    background-color: #000;
+    padding-top: 25px;
+}
+#block-footerlogo {
+    float: left;
+    width: 30%;
+}
+#block-footertext {
+    float: right;
+    width: 60%;
+    color: #fff;
+}
+nav#block-at-palistry-footer {
+    clear: both;
+    text-align: center;
+}
+#block-footerlogo img {
+    width: 150px;
+}
+nav#block-at-palistry-footer ul.menu.odd.menu-level-1.menu-name--footer {
+    justify-content: center;
+    gap: 25px;
+    color: #fff;
+}
+#block-copyright {
+    border-top: 2px solid #fff;
+    padding-top: 20px;
+    text-align: center;
+    color: #fff;
+}
+#block-at-palistry-branding {
+    width: 200px;
+    float: left;
+}
+nav#block-at-palistry-main-menu {
+    float: right;
+}
+.pr-navbar {
+    color: #000;
+    background-color: #fff;
+    padding: 9px 0px;
+}
+nav#block-at-palistry-main-menu ul li:last-child a.menu__link {
+    color: #fff;
+    border-bottom: none;
+    padding-left: 25px;
+    padding-right: 25px;
+    background: #e70001;
+    font-weight: 600;
+    border-radius: 5px;
+    margin-left: 60px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+nav#block-at-palistry-main-menu ul li a.menu__link {
+    color: #000;
+    border-bottom: 2px solid transparent;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 25px;
+}
+nav#block-at-palistry-main-menu ul li a.menu__link.is-active {
+    border-bottom: 2px solid #cb0005;
+}
+nav#block-at-palistry-main-menu ul li a.menu__link:hover {
+    background: transparent;
+}
+nav#block-at-palistry-main-menu ul li:last-child a.menu__link:hover {
+    background: #CB0005;
+}
+.ms-dropmenu .rm-block__content .menu__link:after {
+    display: none !important;
+}
+.ms-dropmenu .rm-block__content .menu-level-2 {
+    transform: translateY(-1.5rem);
+    box-shadow: 0px 0px 6px -4px rgba(0,0,0,0.5);
+    transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    border: none;
+    background: #fff;
+    padding: 10px;
+    left: 25px;
+}
+.ms-dropmenu .rm-block__content li.menu__item--expanded:hover .menu-level-2 {
+  transform: translateY(0rem);
+}
+.ms-dropmenu .rm-block__content .menu-level-2 li a.menu__link {
+    margin-left: 0px !important;
+    font-size: 15px;
+    padding: 8px 0px !important;
+    text-align: left;
+    background: transparent !important;
+    color: #000 !important;
+    font-weight: 400 !important;
+}
+
+/*nav#block-at-palistry-main-menu ul.menu li.menu__item.menu__item-title--donate-now a.menu__link {
+    background: #CB0005;
+    color: #fff;
+    border-radius: 30px;
+    margin-left: 30px;
+    border-bottom: none;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+nav#block-at-palistry-main-menu ul.menu li.menu__item.menu__item-title--donate-now a.menu__link:hover {
+    background: #CB0005;
+}*/
+#block-at-palistry-branding {
+    margin-top: 7px;
+}
+nav#block-at-palistry-main-menu ul.menu {
+    align-items: center;
+}
+.l-leaderboard.l-row {
+    background: #000;
+    height: 30px;
+}
+#leaderboard .regions {
+    background-color: #000;
+}
+#leaderboard .regions ul.menu li a.menu__link {
+    color: #fff;
+    text-transform: capitalize;
+    font-size: 15px;
+}
+#block-headerbutton {
+    display: none;
+}
+.pr-navbar .l-rw.regions.container.pr-navbar__rw {
+    background-color: #fff !important;
+}
+
+nav#block-at-palistry-main-menu ul li:hover a.menu__link{
+    border-color: #cb0005;
+}
+.ms-slidedown .rm-row, .ms-slidedown .rm-region{
+  background: #fff;
+}
+
+
+@media (max-width: 767px) {
+nav#block-at-palistry-main-menu ul li:hover a.menu__link,
+nav#block-at-palistry-main-menu ul li a.menu__link.is-active{
+    border-color: transparent;
+}
+#block-headerbutton a.btn_mobile {
+    color: #fff;
+    border-bottom: none;
+    padding-left: 16px;
+    padding-right: 16px;
+    display: inline-block;
+    background: #e70001;
+    font-weight: 500;
+    border-radius: 5px;
+    /* margin-left: 60px; */
+    padding-top: 8px;
+    padding-bottom: 6px;
+            margin-top: 3px;
+            font-size: 14px;
+}
+#block-headerbutton .field {
+    margin: 0px;
+}
+#block-headerbutton .field p {
+    margin: 0px;
+}
+#block-headerbutton {
+    display: block;
+    float: right;
+}
+.ms-slidedown .rm-block__content {
+    position: absolute;
+    top: 98px;
+    background: #fff;
+    transform: none;
+    width: 100%;
+    left: -100%;
+    opacity: 1 !important;
+    visibility: visible !important;
+    height: 100vh;
+    padding: 0px 20px 0px !important;
+    transition: all 0.3s ease-in-out;
+}
+.ms-slidedown.rm-is-open .rm-block__content {
+    position: absolute;
+    left: 0px;
+    top: 98px;
+    padding: 0px 20px 0px !important;
+    transform: none;
+    margin-top: 0px;
+    height: 100vh;
+}
+nav#block-at-palistry-main-menu ul li a.menu__link {
+    margin-left: 0px;
+    background: transparent;
+            display: inline-block;
+}
+/*nav#block-at-palistry-main-menu ul.menu li.menu__item.menu__item-title--donate-now a.menu__link {
+    margin-left: 0px;
+    width: fit-content;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}*/
+nav#block-at-palistry-main-menu ul li:last-child a.menu__link {
+    font-weight: normal;
+    border-radius: 30px;
+    margin-left: 0px;
+    width: fit-content;
+    padding-top: 9px;
+    margin-top: 13px;
+    padding-bottom: 7px;
+    display: none;
+}
+#block-at-palistry-branding {
+    width: 70%;
+    float: left;
+    position: absolute;
+    left: 72px;
+}
+#block-at-palistry-branding .block__inner.block-branding__inner {
+    width: 150px;
+    margin: auto;
+}
+nav#block-at-palistry-main-menu {
+    float: left;
+}
+.rm-toggle__link, .rm-toggle__link:hover, .rm-toggle__link:focus, .rm-toggle__link:active {
+    color: #000;
+    background-color: #fff;
+    font-size: 0px;
+    padding: 4px 0px 0px;
+}
+.rm-is-open .rm-toggle__link {
+    z-index: 9;
+    /*position: absolute;
+    right: 20px;
+    top: 45px;*/
+}
+.rm-toggle__link .rm-toggle__icon {
+    fill: #000;
+    width: 25px;
+    height: 25px;
+}
+#block-footerlogo {
+    float: left;
+    width: 100%;
+    margin-bottom: 0px;
+}
+#block-footertext {
+    float: left;
+    width: 100%;
+    color: #fff;
+    font-size: 14px;
+    margin-bottom: 0px;
+    line-height: 18px;
+}
+nav#block-at-palistry-footer ul.menu.odd.menu-level-1.menu-name--footer {
+    font-size: 14px;
+    display: block;
+}
+nav#block-at-palistry-footer ul.menu.odd.menu-level-1.menu-name--footer li {
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+#block-footertext p {
+    margin-bottom: 10px;
+}
+#block-copyright {
+    margin-bottom: 0px;
+    font-size: 12px;
+}
+#block-copyright p {
+    margin-bottom: 5px;
+}
+.ms-accordion .rm-accordion-trigger {
+    right: 0;
+    left: auto;
+    background: transparent !important;
+    color: #222 !important;
+}
+.ms-accordion .rm-accordion-trigger svg {
+    fill: #222 !important;
+}
+
+.ms-slidedown .rm-block__content .is-child.menu-level-2 {
+    box-shadow: 0px 0px 6px -4px rgba(0,0,0,0.5);
+    transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    border: none;
+    background: #fff;
+    padding: 10px;
+}
+.ms-slidedown .rm-block__content .is-child.menu-level-2 a.menu__link {
+    margin-top: 0px !important;
+    background: transparent !important;
+    color: #222 !important;
+    padding: 5px 0px 5px 10px !important;
+    margin: 0px;
+            display: block !important;
+}
+.pr-navbar .l-rw.regions.container.pr-navbar__rw {
+    background-color: #fff !important;
+}
+nav#block-at-palistry-main-menu ul li a.menu__link {
+    padding-left: 0;
+}
+
+.ms-slidedown .rm-block__content .is-child {
+    position: initial;
+    padding: 0 !important;
+    border: none !important;
+    box-shadow: none !important;
+}
+
+nav#block-at-palistry-main-menu ul li:last-child a.menu__link {
+    color: #000000 !important;!i;!;
+}
+
+.ms-slidedown .rm-block__content .is-child {
+    opacity: 0;
+    visibility: visible;
+    height: 0;
+    transition: 0 !important;
+    display: none;
+}
+.ms-slidedown .rm-block__content .is-child.is-open--child{
+  opacity: 1;
+  transition: none !important;
+  height: auto;
+  display: block;
+  margin-bottom: 10px;
+}
+button.rm-toggle__link.un-button:before {
+    content: '';
+    display: block;
+    background-image: url(/sites/default/files/inline-images/icons_mobile_0.png);
+    width: 23px;
+    height: 23px;
+    background-size: contain;
+    top: 0;
+    position: absolute;
+    left: 2px;
+    background-repeat: no-repeat;
+}
+button.rm-toggle__link.un-button[aria-expanded="true"]:before {
+    background-image: url(/sites/default/files/inline-images/close_1.png);
+    width: 19px;
+    height: 19px;
+}
+nav button.rm-toggle__link.un-button > svg{
+  display: none;
+}
+nav button.rm-toggle__link.un-button {
+    width: 25px;
+    height: 25px;
+    padding: 0;
+    position: relative;
+}
+button.rm-accordion-trigger.un-button {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+}
+
+.rm-block__content button.rm-accordion-trigger.un-button:before {
+    content: '+';
+    position: absolute;
+    right: 0;
+    top: 3px;
+    line-height: 1;
+    font-size: 26px;
+}
+.rm-block__content button.rm-accordion-trigger.un-button[aria-expanded="true"]:before {
+    content: '-';
+    top: 0;
+    font-size: 26px;
+    line-height: 1;
+    right: 5px;
+}
+.rm-block__content button.rm-accordion-trigger.un-button > svg {
+    display: none;
+}
+
+  nav#block-at-palistry-main-menu ul li a.menu__link {
+    margin-left: 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+nav#block-at-palistry-main-menu ul li:last-child a.menu__link {
+    padding-left: 10px  !important;
+}
+
+}
+
+@media (min-width: 768px) and (max-width: 960px) {
+.ms-slidedown .rm-block__content {
+    position: absolute;
+    top: 0px;
+    background: #fff;
+    
+            transform: translateY(-100%);
+    width: 100%;
+    left: 0px;
+    height: 100vh;
+    padding: 30px 30px 0px !important;
+}
+.ms-slidedown.rm-is-open .rm-block__content {
+    position: fixed;
+    left: 0px;
+    padding: 30px 30px 0px !important;
+    
+            transform: translateY(0%);
+}
+nav#block-at-palistry-main-menu ul li a.menu__link {
+    margin-left: 0px;
+    background: transparent;
+}
+
+nav#block-at-palistry-main-menu ul li:last-child a.menu__link {
+    font-weight: normal;
+    border-radius: 30px;
+    margin-left: 0px;
+    width: fit-content;
+    padding-top: 9px;
+    margin-top: 13px;
+    padding-bottom: 7px;
+}
+#block-at-palistry-branding {
+    width: 150px;
+}
+.rm-toggle__link, .rm-toggle__link:hover, .rm-toggle__link:focus, .rm-toggle__link:active {
+    color: #000;
+    background-color: #fff;
+    font-size: 0px;
+    padding: 4px 0px 0px;
+}
+
+.rm-toggle__link .rm-toggle__icon {
+    fill: #000;
+    width: 25px;
+    height: 25px;
+}
+.rm-is-open .rm-toggle__link {
+    z-index: 9;
+}
+.pr-navbar .l-rw.regions.container.pr-navbar__rw {
+    background-color: #fff !important;
+}
+
+
+
+/*/////////////////////////////////////*/
+
+#block-at-palistry-branding{
+  width: 140px !important;
+}
+
+
+nav#block-at-palistry-main-menu ul li:hover a.menu__link,
+nav#block-at-palistry-main-menu ul li a.menu__link.is-active{
+    border-color: transparent;
+}
+
+nav#block-at-palistry-main-menu ul li:last-child a.menu__link {
+    padding-left: 10px  !important;
+}
+#block-headerbutton a.btn_mobile {
+    color: #fff;
+    border-bottom: none;
+    padding-left: 16px;
+    padding-right: 16px;
+    display: inline-block;
+    background: #e70001;
+    font-weight: 500;
+    border-radius: 5px;
+    /* margin-left: 60px; */
+    padding-top: 8px;
+    padding-bottom: 6px;
+            margin-top: 3px;
+            font-size: 14px;
+}
+#block-headerbutton .field {
+    margin: 0px;
+}
+#block-headerbutton .field p {
+    margin: 0px;
+}
+#block-headerbutton {
+    display: block;
+    float: right;
+}
+.ms-slidedown .rm-block__content {
+    position: absolute;
+    top: 85px;
+    background: #fff;
+    transform: none;
+    width: 60%;
+    left: -100%;
+    opacity: 1 !important;
+    visibility: visible !important;
+    height: 100vh;
+    padding: 0px 20px 0px !important;
+    transition: all 0.3s ease-in-out;
+}
+.ms-slidedown.rm-is-open .rm-block__content {
+    position: absolute;
+    left: 0px;
+    top: 85px;
+    padding: 0px 20px 0px !important;
+    transform: none;
+    margin-top: 0px;
+    height: 100vh;
+}
+nav#block-at-palistry-main-menu ul li a.menu__link {
+    margin-left: 0px;
+    background: transparent;
+            display: inline-block;
+}
+
+nav#block-at-palistry-main-menu ul li:last-child a.menu__link {
+    font-weight: normal;
+    border-radius: 30px;
+    margin-left: 0px;
+    width: fit-content;
+    padding-top: 9px;
+    margin-top: 13px;
+    padding-bottom: 7px;
+    display: none;
+}
+#block-at-palistry-branding {
+    width: 70%;
+    float: left;
+    position: absolute;
+    left: 72px;
+}
+#block-at-palistry-branding .block__inner.block-branding__inner {
+    width: 150px;
+    margin: auto;
+}
+nav#block-at-palistry-main-menu {
+    float: left;
+}
+.rm-toggle__link, .rm-toggle__link:hover, .rm-toggle__link:focus, .rm-toggle__link:active {
+    color: #000;
+    background-color: #fff;
+    font-size: 0px;
+    padding: 4px 0px 0px;
+}
+.rm-is-open .rm-toggle__link {
+    z-index: 9;
+}
+.rm-toggle__link .rm-toggle__icon {
+    fill: #000;
+    width: 25px;
+    height: 25px;
+}
+#block-footerlogo {
+    float: left;
+    width: 100%;
+    margin-bottom: 0px;
+}
+#block-footertext {
+    float: left;
+    width: 100%;
+    color: #fff;
+    font-size: 14px;
+    margin-bottom: 0px;
+    line-height: 18px;
+}
+nav#block-at-palistry-footer ul.menu.odd.menu-level-1.menu-name--footer {
+    font-size: 14px;
+    display: block;
+}
+nav#block-at-palistry-footer ul.menu.odd.menu-level-1.menu-name--footer li {
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+#block-footertext p {
+    margin-bottom: 10px;
+}
+#block-copyright {
+    margin-bottom: 0px;
+    font-size: 12px;
+}
+#block-copyright p {
+    margin-bottom: 5px;
+}
+.ms-accordion .rm-accordion-trigger {
+    right: 0;
+    left: auto;
+    background: transparent !important;
+    color: #222 !important;
+}
+.ms-accordion .rm-accordion-trigger svg {
+    fill: #222 !important;
+}
+
+.ms-slidedown .rm-block__content .is-child.menu-level-2 {
+    box-shadow: 0px 0px 6px -4px rgba(0,0,0,0.5);
+    transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    border: none;
+    background: #fff;
+    padding: 10px;
+}
+.ms-slidedown .rm-block__content .is-child.menu-level-2 a.menu__link {
+    margin-top: 0px !important;
+    background: transparent !important;
+    color: #222 !important;
+    padding: 5px 0px 5px 10px !important;
+    margin: 0px;
+            display: block !important;
+}
+.pr-navbar .l-rw.regions.container.pr-navbar__rw {
+    background-color: #fff !important;
+}
+nav#block-at-palistry-main-menu ul li a.menu__link {
+    padding-left: 0;
+}
+
+.ms-slidedown .rm-block__content .is-child {
+    position: initial;
+    padding: 0 !important;
+    border: none !important;
+    box-shadow: none !important;
+}
+
+nav#block-at-palistry-main-menu ul li:last-child a.menu__link {
+    color: #000000 !important;!i;!;
+}
+
+.ms-slidedown .rm-block__content .is-child {
+    opacity: 0;
+    visibility: visible;
+    height: 0;
+    transition: 0 !important;
+    display: none;
+}
+.ms-slidedown .rm-block__content .is-child.is-open--child{
+  opacity: 1;
+  transition: none !important;
+  height: auto;
+  display: block;
+  margin-bottom: 10px;
+}
+button.rm-toggle__link.un-button:before {
+    content: '';
+    display: block;
+    background-image: url(/sites/default/files/inline-images/icons_mobile_0.png);
+    width: 23px;
+    height: 23px;
+    background-size: contain;
+    top: 0;
+    position: absolute;
+    left: 2px;
+    background-repeat: no-repeat;
+}
+button.rm-toggle__link.un-button[aria-expanded="true"]:before {
+    background-image: url(/sites/default/files/inline-images/close_1.png);
+    width: 19px;
+    height: 19px;
+}
+nav button.rm-toggle__link.un-button > svg{
+  display: none;
+}
+nav button.rm-toggle__link.un-button {
+    width: 25px;
+    height: 25px;
+    padding: 0;
+    position: relative;
+}
+button.rm-accordion-trigger.un-button {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+}
+
+.rm-block__content button.rm-accordion-trigger.un-button:before {
+    content: '+';
+    position: absolute;
+    right: 0;
+    top: 3px;
+    line-height: 1;
+    font-size: 26px;
+}
+.rm-block__content button.rm-accordion-trigger.un-button[aria-expanded="true"]:before {
+    content: '-';
+    top: 0;
+    font-size: 26px;
+    line-height: 1;
+    right: 5px;
+}
+.rm-block__content button.rm-accordion-trigger.un-button > svg {
+    display: none;
+}
+
+  nav#block-at-palistry-main-menu ul li a.menu__link {
+    margin-left: 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+  .ms-slidedown .rm-block__content .is-child.is-open--child {
+    padding-left: 10px !important;
+  }
+
+
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+nav#block-at-palistry-main-menu ul li:last-child a.menu__link {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+nav#block-at-palistry-main-menu ul li a.menu__link {
+    margin-left: 5px;
+}
+nav#block-at-palistry-main-menu ul.menu li.menu__item.menu__item-title--donate-now a.menu__link {
+    margin-left: 25px;
+}
+#block-at-palistry-branding {
+    margin-top: 2px;
+}
+}
+
+
+@media(max-width: 991px){
+nav#block-at-palistry-main-menu ul li a.menu__link {
+    margin-left: 5px;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+}
+
+@media(max-width: 580px){
+ #block-at-palistry-branding {
+    width: 150px;
+}
+.ms-slidedown.rm-is-open .rm-block__content,
+.ms-slidedown .rm-block__content {
+    top: 85px;
+}
+div#rid-navbar {
+    padding: 0;
+}
+
+
+}
+
+
+
