--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -1313,8 +1313,18 @@ li#menu-name--main__contribute {
     background: transparent !important;
 }
 
-
-
+footer#footer a {
+    color: #fff;
+    font-size: 16px;
+    font-weight: 200;
+}
+footer#footer li {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+footer ul.menu.odd.menu-level-1.menu-name--footer {
+    display: none;
+}
 
 @media(max-width: 1199px){
 header#masthead .l-rw.regions.container.pr-header__rw {
@@ -1402,6 +1412,11 @@ nav#block-at-palistry-main-menu ul li.menu_item ul.menu a.menu_link {
     padding-left: 12px !important;
     margin-left: 0 !important;
 }
+body.rm-is-open {
+    overflow: hidden;
+}
+
+
 
 }
 
@@ -1426,7 +1441,14 @@ nav#block-at-palistry-main-menu ul li:last-child a.menu__link {
 .rm-block_content .menu > .menuitem ul.menu .menu_item {
     padding-left: 12px !important;
 }
-
+nav#block-at-palistry-main-menu ul li:last-child a.menu_link, nav#block-at-palistry-main-menu ul li a.menu_link {
+    margin-left: 0px !important;
+    padding-left: 0px !important;
+    padding-right: 10px !important;
+}
+nav#block-at-palistry-main-menu ul li ul.menu a.menu__link {
+    padding-left: 10px !important;
+}
 
 }
 
@@ -1447,6 +1469,24 @@ header#masthead #rid-header-second {
 }
 div#rid-header-first {
     width: 65% !important;
+}
+
+div#rid-footer {
+    padding: 0;
+}
+footer#footer a {
+    text-align: center;
+}
+footer .block_content.block-menu_content {
+    width: 100%;
+}
+footer#footer ul.menu.odd.menu-level-1 li.menu__item {
+    width: 100% !important;
+    margin: 3px 0 !important;
+}
+
+ul.menu-name--main, div.l-footer ul.menu-name--main {
+    flex-wrap: wrap !important;
 }
 
 }
