fix syntax issue; missing semi-colon

--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -108,7 +108,7 @@ article.node--id-1 span.field-name-title {
 
 div.palistory_mission {
   display: block;
-  background: rgba(169, 169, 169, .8)
+  background: rgba(169, 169, 169, .8);
   border-radius: 25px;
   margin: 12px;
 }
