remove debug code

--- a/templates/field/field--image.html.twig
+++ b/templates/field/field--image.html.twig
@@ -61,7 +61,7 @@
 {%- endif -%}
 <div{{ attributes.addClass(classes, count_class) }}>
   {%- if not label_hidden -%}
-    <h3{{ title_attributes.addClass(title_classes) }}>EDITING CORRECT TEMPLATE: {{ label }}</h3>
+    <h3{{ title_attributes.addClass(title_classes) }}>: {{ label }}</h3>
   {%- endif -%}
   {%- for delta, item in items -%}
     {%- if item.caption.show == true -%}
